# feluda

./: CHANGELOG.md  dummy6.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-push-audiovec-worker-staging.yml  docker-push-hash-worker-staging.yml  docker-push-media-worker-staging.yml  docker-push-vidvec-benchmark-test.yml  docker-push-vidvec-benchmark.yml  docker-push-vidvec-worker-staging.yml  merge-main.yml  pr-security.yml
feluda/: test.txt  test_file.py
operators/cluster_embeddings/: dummy1.txt  pyproject.toml
operators/dimension_reduction/: pyproject.toml
operators/image_vec_rep_resnet/: dummy3.txt  pyproject.toml
operators/vid_vec_rep_clip/: pyproject.toml
src/: dev_requirements.in  dev_requirements.txt  requirements.in  requirements.txt
