[project]
name = "feluda"
version = "0.9.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "boto3>=1.28.0", "dacite>=1.6.0", "pydub>=0.24.0", "pyyaml>=5.4.0", "requests>=2.28.0", "werkzeug>=2.2.0", "wget>=3.2", "toml>=0.10.0", "pillow>=9.5.0", "numpy>=1.21.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [ "python-semantic-release>=8.0.0", "toml>=0.10.0", "tomli>=2.0.0", "tomli-w>=1.0.0", "ruff>=0.0.100", "pre-commit>=3.0.0", "pyproject-pre-commit[ruff]>=0.1.0", "pytest>=7.0.0",]

[tool.semantic_release]
version_variable = [ "pyproject.toml:project.version",]

[tool.ruff]
exclude = [ "src", "dist", ".docker", ".pytest_cache", ".ruff_cache",]

[tool.uv.workspace]
members = [ "operators/image_vec_rep_resnet", "operators/vid_vec_rep_clip", "operators/cluster_embeddings", "operators/dimension_reduction",]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = [ "feluda",]
